tests/errors/import_missing.orus
import "tests/modules/not_there.orus"

fn main() {
}
